Corrected an issue with Base64 encoding for JDK7